BusOne/src/objects/Benefit_Design_Line_vod__c.object
<CustomObject>
    <description>A Benefit Design Line is a child of a Benefit Design. It represents the formulary information for one product for a specific benefit design.</description>
    <fields>
        <fullName>Benefit_Design_vod__c</fullName>
        <description>Link to the parent Benefit Design.</description>
        <label>Benefit Design</label>
        <referenceTo>Benefit_Design_vod__c</referenceTo>
        <relationshipLabel>Benefit Design Lines</relationshipLabel>
        <relationshipName>Benefit_Design_Line_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Competitor_vod__c</fullName>
        <description>Indicates whether the product is a competitor product. If true, product is a competitor; otherwise it is a company product. Evaluated from the Competitor_vod field in Formulary_Product_vod object. Not visible in the page layout - used only by the application.</description>
        <formula>Product_vod__r.Competitor_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copay_Source_vod__c</fullName>
        <description>Copay (Source) value for this benefit design line.</description>
        <label>Copay (Source)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_vod__c</fullName>
        <description>Copay for this benefit deisgn line.</description>
        <label>Copay</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is used for data loading only.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Notes_Source_vod__c</fullName>
        <description>This data is meant to be loaded and refreshed by the customer from the source data provider, such as MediMedia and not changed by end users. If the Notes field is filled in, it will override the Notes (Source) field in the display of the formulary control.</description>
        <label>Notes (Source)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_vod__c</fullName>
        <description>Notes about any restrictions or status for this product on this benefit design.</description>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product is a lookup the Formulary Product object. Note that this is not a lookup to the product catalog that is used for sampling and detailing.  This field is required because every benefit design line relates to a product.</description>
        <label>Product</label>
        <referenceTo>Formulary_Products_vod__c</referenceTo>
        <relationshipLabel>Benefit Design Lines</relationshipLabel>
        <relationshipName>Product_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Restrictions_Source_vod__c</fullName>
        <description>This data is meant to be loaded and refreshed by the customer from the source data provider, such as MediMedia and not changed by end users. If the Restrictions field is filled in, it will override the Restrictions (Source) field in the display of the formulary control.</description>
        <label>Restrictions (Source)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>QL</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Restrictions_vod__c</fullName>
        <description>Restriction codes for this product in this benefit design line. For example, one of the codes might be &apos;PA&apos;, which stands for Prior Auth. The valid values in this field are controlled by the value of the type field, because not all restriction codes are valid for all types of benefit designs.</description>
        <label>Restrictions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Type_vod__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>QL</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Source_vod__c</fullName>
        <description>This data is meant to be loaded and refreshed by the customer from the source data provider, such as MediMedia and not changed by end users. If the Status field is filled in, it will override the Status (Source) field in the display of the formulary control.</description>
        <label>Status (Source)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved with Restrictions</fullName>
                </value>
                <value>
                    <fullName>Non-Formulary</fullName>
                </value>
                <value>
                    <fullName>Non-Formulary / Covered</fullName>
                </value>
                <value>
                    <fullName>Non-Formulary / Higher Copay</fullName>
                </value>
                <value>
                    <fullName>Non-Formulary / Not Reimbursed</fullName>
                </value>
                <value>
                    <fullName>Non-Formulary / Prior Authorization</fullName>
                </value>
                <value>
                    <fullName>Non-Formulary / Unknown</fullName>
                </value>
                <value>
                    <fullName>Not Listed / Covered</fullName>
                </value>
                <value>
                    <fullName>Not Listed / Higher Copay</fullName>
                </value>
                <value>
                    <fullName>Not Listed / Not Reimbursed</fullName>
                </value>
                <value>
                    <fullName>Not Listed / Prior Authorization</fullName>
                </value>
                <value>
                    <fullName>Not Listed / Unknown</fullName>
                </value>
                <value>
                    <fullName>Not Reimbursed</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>Prior Authorization</fullName>
                </value>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
                <value>
                    <fullName>Tier 5</fullName>
                </value>
                <value>
                    <fullName>Tier 6</fullName>
                </value>
                <value>
                    <fullName>Tier 7</fullName>
                </value>
                <value>
                    <fullName>Tier 8</fullName>
                </value>
                <value>
                    <fullName>Tier 9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status codes for this product in this benefit design line. For example, one of the codes might be &apos;Tier 1&apos;.  The valid values in this field are controlled by the value of the type field, because not all status values are valid for all types of benefit designs.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_vod__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved with Restrictions</fullName>
                </value>
                <value>
                    <fullName>Non-Formulary</fullName>
                </value>
                <value>
                    <fullName>Non-Formulary / Covered</fullName>
                </value>
                <value>
                    <fullName>Non-Formulary / Higher Copay</fullName>
                </value>
                <value>
                    <fullName>Non-Formulary / Not Reimbursed</fullName>
                </value>
                <value>
                    <fullName>Non-Formulary / Prior Authorization</fullName>
                </value>
                <value>
                    <fullName>Non-Formulary / Unknown</fullName>
                </value>
                <value>
                    <fullName>Not Listed / Covered</fullName>
                </value>
                <value>
                    <fullName>Not Listed / Higher Copay</fullName>
                </value>
                <value>
                    <fullName>Not Listed / Not Reimbursed</fullName>
                </value>
                <value>
                    <fullName>Not Listed / Prior Authorization</fullName>
                </value>
                <value>
                    <fullName>Not Listed / Unknown</fullName>
                </value>
                <value>
                    <fullName>Not Reimbursed</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>Prior Authorization</fullName>
                </value>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
                <value>
                    <fullName>Tier 5</fullName>
                </value>
                <value>
                    <fullName>Tier 6</fullName>
                </value>
                <value>
                    <fullName>Tier 7</fullName>
                </value>
                <value>
                    <fullName>Tier 8</fullName>
                </value>
                <value>
                    <fullName>Tier 9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>The type field is the type of benefit design (commercial, VA, Medicade, etc.)  It is populated by a trigger, which pulls down the value from the type field on the parent benefit design object. The type field needs to be replicated to the benefit design line object so that it can control the dependent picklists for status and restrictions.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Benefit Design Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Linenumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefit Design Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>